Add every window to its own window group

This prevents window modal dialogs from blocking the entire app.

https://bugzilla.gnome.org/show_bug.cgi?id=443785